# OpenVNFManager

./: .gitmodules  README.rst
python-vnfsvcclient/: MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py
python-vnfsvcclient/doc/source/: conf.py  index.rst
python-vnfsvcclient/python_vnfsvcclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
python-vnfsvcclient/tools/: vnfsvc.bash_completion
python-vnfsvcclient/vnfsvcclient/: client.py  shell.py  version.py
python-vnfsvcclient/vnfsvcclient/common/: exceptions.py  serializer.py  yamlutil.py
python-vnfsvcclient/vnfsvcclient/openstack/common/: gettextutils.py  jsonutils.py
python-vnfsvcclient/vnfsvcclient/v1_0/: client.py
python-vnfsvcclient/vnfsvcclient/vnfsvc/: client.py
python-vnfsvcclient/vnfsvcclient/vnfsvc/v1_0/: __init__.py  diagnostics.py  service.py  service_activate.py
vnfmanager/: MANIFEST.in  README.rst  __init__.py  setup.cfg  setup.py
vnfmanager/vnfmanager/: .vnf_manager.py.swn  .vnf_manager.py.swo  config.py  context.py  manager.py  service.py  version.py  vnf_manager.py
vnfmanager/vnfmanager/agent/: rpc.py
vnfmanager/vnfmanager/agent/linux/: __init__.py  ip_lib.py  utils.py
vnfmanager/vnfmanager/common/: config.py  exceptions.py  log.py  rpc.py  topics.py  utils.py
vnfmanager/vnfmanager/drivers/: '  vyatta.py
vnfmanager/vnfmanager/drivers/common/: apiadapter.py  requestadapter.py  sshadapter.py
vnfmanager/vnfmanager/openstack/common/: context.py  eventlet_backdoor.py  excutils.py  fileutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  periodic_task.py  policy.py  service.py  strutils.py  systemd.py  threadgroup.py
vnfsvc/: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
vnfsvc/etc/: api-paste.ini  rootwrap.conf  templates.json  vnfsvc.conf
vnfsvc/vnfsvc/: .plugin.py.swo  auth.py  config.py  constants.py  context.py  manager.py  messaging.py  nsdmanager.py  plugin.py  service.py  utility.py  version.py  vnffg.py  wsgi.py
vnfsvc/vnfsvc/agent/: rpc.py
vnfsvc/vnfsvc/agent/linux/: utils.py
vnfsvc/vnfsvc/api/: api_common.py  versions.py
vnfsvc/vnfsvc/api/v2/: attributes.py  base.py  resource.py  resource_helper.py  router.py  vnf.py
vnfsvc/vnfsvc/api/views/: versions.py
vnfsvc/vnfsvc/client/: client.py  utils.py
vnfsvc/vnfsvc/common/: 204_parser.py  config.py  constants.py  driver_manager.py  exceptions.py  log.py  parser_utils.py  parser_utils_vnfd.py  rpc.py  utils.py
vnfsvc/vnfsvc/common/yaml/: nsdparser.py  vnfdparser.py
vnfsvc/vnfsvc/db/: common_db_mixin.py  model_base.py  sqlalchemyutils.py
vnfsvc/vnfsvc/db/migration/: alembic.ini  cli.py
vnfsvc/vnfsvc/db/migration/alembic_migrations/: env.py  heal_script.py
vnfsvc/vnfsvc/db/migration/alembic_migrations/versions/: folsom_initial.py
vnfsvc/vnfsvc/db/migration/models/: frozen.py  head.py
vnfsvc/vnfsvc/db/vnf/: .vnf_db.py.swp  vnf_db.py
vnfsvc/vnfsvc/openstack/common/: context.py  eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  periodic_task.py  service.py  strutils.py  systemd.py  threadgroup.py
vnfsvc/vnfsvc/openstack/common/middleware/: catch_errors.py  correlation_id.py  debug.py  request_id.py  sizelimit.py
vnfsvc/vnfsvc/server/: __init__.py
