[metadata]
name = python-vnfsvcclient
version = 2015.1.0
summary = CLI and Client Library for VNF Service 
description-file =
    README.rst
author = Tata Consultancy Services Limited
author-email = 
home-page = https://github.com/TCS-TelcoCloud/python-vnfsvcclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vnfsvcclient

[entry_points]
console_scripts =
    vnfsvc = vnfsvcclient.shell:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
