[metadata]
name = vnfmanager
version = 2015.1.0
author = Tata Consultancy Services Limited
author-email = 
home-page = https://github.com/TCS-TelcoCloud/vnfmanager
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	vnfmanager

[entry_points]
console_scripts = 
	vnf-manager = vnfmanager.vnf_manager:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[easy_install]

