[metadata]
name = vnfsvc
version = 2015.1.0
summary = OpenVNFManager enables NFV service orchestration
description-file =
    README.rst
author = Tata Consultancy Services Limited
author-email = https://github.com/TCS-TelcoCloud/vnfsvc  
home-page = 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vnfsvc
data_files = 
    /etc/vnfsvc =
       etc/vnfsvc.conf
       etc/api-paste.ini
       etc/templates.json
       etc/rootwrap.conf
    /etc/vnfsvc/rootwrap.d =
       etc/rootwrap.d/debug.filters


[entry_points]
console_scripts=
    vnf-manager = vnfsvc.vnfmanager.manager:main
    vnfsvc-server = vnfsvc.server:main
    vnfsvc-db-manage = vnfsvc.db.migration.cli:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = vnfsvc/locale
domain = vnfsvc

[update_catalog]
domain = vnfsvc
output_dir = vnfsvc/locale
input_file = vnfsvc/locale/vnfsvc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = vnfsvc/locale/vnfsvc.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1
warnerrors = true
